# atmoshoot

./: Cargo.toml  run
assets/textures/: enemy.aseprite  enemy2.aseprite  player.aseprite
assets/textures_bkp/: atlas.ron
src/: main.rs
src/bundles/: mod.rs
src/components/: mod.rs
src/events/: mod.rs
src/state_machines/: basic_ai.rs  mod.rs
src/systems/: actor_system.rs  basic_ai.rs  clear_velocity_system.rs  collision_system.rs  follow_entity_system.rs  input_system.rs  mod.rs  movement_intent_system.rs  movement_system.rs  observer_system.rs  player_attack_system.rs  player_movement_system.rs  self_destruct.rs  spatial_system.rs  sprite_add_system.rs
