[package]
name = "bevytry"
version = "0.1.0"
authors = ["Jesse Viikari <jesse.viikari@vincit.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.5"
bevy = { path = "/home/speak/git/bevy" }
rand = "0.8.3"
